ec2.tf
provider "aws" {
    region = "us-east-1"
}

resource "aws_instance" "demo_server" {
    ami = 
    instance_type = "t2.micro"
    key_name = "jogesh-kp"
}
